=== shared-mime-info 0.50 ===

2008-07-22  Bastien Nocera  <hadess@hadess.net>

	* Makefile.am: fix distcheck
	* NEWS: upd
	* configure.in: 0.50

2008-07-21  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Add MSI (Windows Installer) mime-type,
	including magic, based on work from Scott Ritchie
	<scott@open-vote.org> (Closes: #16495)
	* tests/list:
	* tests/test.msi: add test case for the above

2008-07-20  Bastien Nocera  <hadess@hadess.net>

	* shared-mime-info-spec.xml: Better wording on the intentions
	for the "path" property, patch from Matthias Clasen
	<mclasen@redhat.com>

2008-07-20  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Better tree magic for HD-DVD
	* tests/tree-list: add more tests for the recently added
	tree magics

2008-07-20  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Add missing treemagic for the
	recently added filetypes

2008-07-19  Bastien Nocera  <hadess@hadess.net>

	* Makefile.am: Fail if the tree test failed
	* freedesktop.org.xml.in: Move some types from nautilus,
	not fully implemented yet
	* test-tree-magic.c (handle_one_line), (type_to_path),
	(print_matchlet), (main): Add some debug functionality
	* tests/tree-list: Add a test for VCDs

2008-07-18  Bastien Nocera  <hadess@hadess.net>

	* .cvsignore: upd

	* shared-mime-info-spec.xml: Update the spec to contain
	"content-types" or "tree magic", to detect an "x-content/" mime-type
	from a directory structure, patch from Matthias Clasen
	<mclasen@redhat.com>

	* update-mime-database.c (process_freedesktop_node),
	(cmp_tree_magic), (tree_match_new), (tree_match_free),
	(build_tree_matches), (tree_magic_free), (tree_magic_new),
	(write_tree_magic_children), (write_tree_magic), (add_type),
	(write_types), (write_header), (write_types_cache), (write_cache),
	(main): Add support for writing the tree-magic file, as per the
	spec update above, patch from Matthias Clasen <mclasen@redhat.com>
