@@ -1,3 +1,9 @@
+2008-07-23  Bastien Nocera  <hadess@hadess.net>
+
+	* freedesktop.org.xml.in: Fix capitalisation in a number
+	of mime-types, better description for a number of content-types,
+	thanks to Benno Schulenberg <bensberg@justemail.net>
+
 === shared-mime-info 0.50 ===
 
 2008-07-22  Bastien Nocera  <hadess@hadess.net>
